--- a/views/index.jade
+++ b/views/index.jade
@@ -1,35 +1,3 @@
-//extends layout
-//
-//block content
-//  h1= title
-//  p Welcome to #{title}
-//app.username.$invalid || app.password.$invalid || app.email.$invalid
+include index.html
 
-doctype html
-html
-    head
-        meta(charset='UTF-8')
-        title= title
-        link(rel='stylesheet', href='/stylesheets/indexstyle.css')
-    body(ng-app='loginModule' ng-controller="LoginCtrl as app")
-        .login-page
-            .form
-                form.register-form(name='registrationForm')
-                    input(type='text', placeholder='username', ng-model='userName' required)
-                    input(type='password', placeholder='password' ng-model='password' required)
-                    input(type='text', placeholder='email address' ng-model='email' required)
-                    button(ng-disabled="registrationForm.$invalid" ng-click='app.registerUser(userName, password, email)') create
-                    p.message
-                        | Already registered?
-                        a(ng-click='app.animateForm()' href) Sign In
-                form.login-form(name='loginForm')
-                    input(type='text', placeholder='username' ng-model='user_name' required)
-                    input(type='password', placeholder='password' ng-model='pass_word' required)
-                    button(ng-disabled="loginForm.$invalid" ng-click='app.verifyUser(user_name, pass_word)') login
-                    p.message
-                        | Not registered?
-                        a(ng-click='app.animateForm()' href) Create an account
-        script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js')
-        script(src='/bower_components/angular/angular.js')
-        script(src='/javascripts/index.js')
 
