login module and successful login redirection implemented

--- a/public/stylesheets/indexstyle.css
+++ b/public/stylesheets/indexstyle.css
@@ -88,6 +88,12 @@
 .container .info span .fa {
   color: #EF3B3A;
 }
+
+.text-danger {
+  margin-top: 15px;
+  color: #FF0000;
+  font-size: 15px;
+}
 body {
   background: #76b852; /* fallback for old browsers */
   background: -webkit-linear-gradient(right, #76b852, #8DC26F);
