--- a/views/index.html
+++ b/views/index.html
@@ -5,29 +5,19 @@
     <title></title>
     <link rel="stylesheet" href="/stylesheets/indexstyle.css">
 </head>
-<body ng-app="loginModule" ng-controller="LoginCtrl as app">
-<div class="login-page">
-    <div class="form">
-        <form name="registrationForm" class="register-form">
-            <input type="text" placeholder="username" ng-model="userName" required>
-            <input type="password" placeholder="password" ng-model="password" required>
-            <input type="text" placeholder="email address" ng-model="email" required>
-            <button ng-disabled="registrationForm.$invalid" ng-click="app.registerUser(userName, password, email)">create</button>
-            <p class="message">Already registered?<a ng-click="app.animateForm()" href>Sign In</a></p>
-        </form>
-        <form name="loginForm" class="login-form">
-            <input type="text" placeholder="username" ng-model="user_name" required>
-            <input type="password" placeholder="password" ng-model="pass_word" required>
-            <button ng-disabled="loginForm.$invalid" ng-click="app.verifyUser(user_name, pass_word)">login</button>
-            <p class="message">Not registered?<a ng-click="app.animateForm()" href>Create an account</a></p>
-        </form>
-    </div>
-</div>
+<body ng-app="fieldManagement" >
+
+<div ui-view =""></div>
+
+
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="/bower_components/angular/angular.js"></script>
-<script src="/bower_components/angular-resource/angular-resource.js"></script>
-<script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="/javascripts/index.js"></script>
-<script src="/angular_routes/dashboard_route.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="angular_app.js"></script>
+<script src="web/controllers/login_controller.js"></script>
+<script src="web/controllers/dashboard_controller.js"></script>
+<script src="web/angular_routes/dashboard_route.js"></script>
+<script src="web/angular_routes/login_routes.js"></script>
 </body>
 </html>
