Replace bower with npm. Use sessions and secure connection on production.

--- a/views/index.html
+++ b/views/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="/stylesheets/indexstyle.css">
-</head>
-<body ng-app="fieldManagement" >
 
-<div ui-view =""></div>
+    <head>
+        <meta charset="UTF-8">
+        <title></title>
+        <link rel="stylesheet" href="/stylesheets/indexstyle.css">
+    </head>
 
+    <body ng-app="fieldManagement" >
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-resource/angular-resource.js"></script>
-<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-<script src="angular_app.js"></script>
-<script src="web/controllers/login_controller.js"></script>
-<script src="web/controllers/dashboard_controller.js"></script>
-<script src="web/angular_routes/dashboard_route.js"></script>
-<script src="web/angular_routes/login_routes.js"></script>
-</body>
+        <div ui-view =""></div>
+
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="node_modules/angular/angular.js"></script>
+        <script src="node_modules/angular-resource/angular-resource.js"></script>
+        <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>
+        <script src="angular_app.js"></script>
+        <script src="web/controllers/login_controller.js"></script>
+        <script src="web/controllers/dashboard_controller.js"></script>
+        <script src="web/angular_routes/dashboard_route.js"></script>
+        <script src="web/angular_routes/login_routes.js"></script>
+    </body>
+
 </html>
